<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Scoreboard Android</string>
  <string name="start_service">Start Live Score</string>
  <string name="update_once">Update Once</string>
  <string name="stop_service">Stop</string>
  <string name="status_idle">Idle</string>
  <string name="status_running">Live score running</string>
  <string name="status_updated">Updated notification</string>
  <string name="status_stopped">Stopped</string>
  <string name="widget_name">Scoreboard Live</string>
</resources>
